--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 
 [dependencies]
 openai_chatgpt_api = "0.1.2"
-teloxide = "0.12.2"
+teloxide = { version = "0.12", features = ["macros"] }
+log = "0.4"
+pretty_env_logger = "0.4"
+tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+anyhow = "1.0.70"
