--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 anyhow = "1.0.70"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9.19"
