Support switching roles

--- a/storage/roles.yaml
+++ b/storage/roles.yaml
@@ -1,2 +1,2 @@
 assistant:
-  system: You are a helpful assistant
+  system: You are my programming assistant, your reply to me can be in Markdown format.
