--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 anyhow = "1.0.70"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.19"
+serde_json = "1.0.96"
